# inviwo-marketplace-module

marketplace/: CMakeLists.txt
marketplace/include/inviwo/marketplace/: marketplacemodule.h
marketplace/src/: marketplacemodule.cpp
marketplace/src/processors/: marketplace.cpp
